package com.legends.battle;
//Enum for Battle Modes
public enum BattleMode {
    PVE,
    PVP
}
